--- a/build.gradle
+++ b/build.gradle
@@ -18,10 +18,15 @@ allprojects {
         }
     }
 
+    artifacts {
+        archives shadowJar
+    }
+
     shadowJar {
         archiveBaseName.set("NetworkRelay")
         archiveClassifier.set("")
         archiveVersion.set("")
+        transform(com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer)
     }
 
     java {
