--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ allprojects {
         consoleAppender = "1.3.0"
         log4jVersion = "2.23.1"
         guavaVersion = "33.2.1-jre"
+        dsiUtils = "2.7.3"
     }
 
     dependencies {
@@ -59,6 +60,7 @@ allprojects {
         implementation "net.minecrell:terminalconsoleappender:${consoleAppender}"
         implementation "org.jline:jline-terminal-jansi:${jlineTerminal}"
         implementation("com.google.guava:guava:${guavaVersion}")
+        implementation "it.unimi.dsi:dsiutils:${dsiUtils}"
 
         compileOnly "org.projectlombok:lombok:${lombokVersion}"
         annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
