--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,7 @@
+import com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer
+
 plugins {
-    id "com.github.johnrengelman.shadow" version "8.1.1"
+    id "com.gradleup.shadow" version "8.3.3"
     id "java"
     id "java-library"
 }
@@ -27,7 +29,7 @@ allprojects {
         archiveBaseName.set("NetworkRelay")
         archiveClassifier.set("")
         archiveVersion.set("")
-        transform(com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer)
+        transform(Log4j2PluginsCacheFileTransformer)
     }
 
     java {
@@ -41,7 +43,7 @@ allprojects {
 
     ext {
         lombokVersion = "1.18.34"
-        nettyVersion = "4.1.111.Final"
+        nettyVersion = "4.1.114.Final"
         spongeConfig = "4.1.2"
         jlineTerminal = "3.26.1"
         consoleAppender = "1.3.0"
