--- a/build.gradle
+++ b/build.gradle
@@ -63,8 +63,8 @@ allprojects {
         implementation "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
         implementation "org.slf4j:slf4j-api:${slf4j}"
         implementation "org.slf4j:slf4j-jdk14:${slf4j}"
+        implementation("org.jline:jline-reader:${jlineTerminal}")
         implementation "net.minecrell:terminalconsoleappender:${consoleAppender}"
-        implementation "org.jline:jline-terminal-jansi:${jlineTerminal}"
         implementation "com.lmax:disruptor:${disruptor}"
         implementation "io.netty:netty-transport-native-epoll:${nettyVersion}:linux-x86_64"
         implementation "io.netty:netty-transport-native-epoll:${nettyVersion}:linux-aarch_64"
