--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 import com.github.jengelman.gradle.plugins.shadow.transformers.Log4j2PluginsCacheFileTransformer
 
 plugins {
-    id "com.gradleup.shadow" version "8.3.6"
+    id "com.gradleup.shadow" version "8.3.8"
     id "java"
     id "java-library"
 }
@@ -45,11 +45,11 @@ allprojects {
 
     ext {
         lombokVersion = "1.18.38"
-        nettyVersion = "4.2.2.Final"
+        nettyVersion = "4.2.3.Final"
         spongeConfig = "4.2.0"
         jlineTerminal = "3.30.4"
         consoleAppender = "1.3.0"
-        log4jVersion = "2.24.3"
+        log4jVersion = "2.25.1"
         guavaVersion = "33.4.8-jre"
         dsiUtils = "2.7.4"
         disruptor = "3.4.4"
@@ -82,6 +82,7 @@ allprojects {
 
         compileOnly "org.projectlombok:lombok:${lombokVersion}"
         annotationProcessor "org.projectlombok:lombok:${lombokVersion}"
+        annotationProcessor "org.apache.logging.log4j:log4j-core:${log4jVersion}"
     }
 
 }
